# headersvalidator

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
docs/: SECURITY_VERDICT.md  security-verdict.md
headersvalidator/: __init__.py  assessor.py  checker.py  cli.py  constants.py  http_utils.py  models.py  reporter.py  verdict.py
tests/: conftest.py  test_assessor.py  test_checker.py  test_cli.py  test_constants.py  test_http_utils.py  test_models.py  test_reporter.py  test_verdict.py
