[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headersvalidator"
version = "0.1.2"
description = "HTTP response header validator — RFC 9110, RFC 9111, OWASP, IANA"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0"
license-files = ["LICENSE"]
authors = [{ name = "t0kubetsu" }]
keywords = [
    "cybersecurity",
    "security-audit",
    "http",
    "headers",
    "security",
    "owasp",
    "rfc9110",
    "rfc9111",
    "iana",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31",
    "rich>=13.7",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/t0kubetsu/headersvalidator"
Repository = "https://github.com/t0kubetsu/headersvalidator"
Issues = "https://github.com/t0kubetsu/headersvalidator/issues"
# Changelog      = "https://github.com/t0kubetsu/headersvalidator/blob/main/CHANGELOG.md"

[project.scripts]
headersvalidator = "headersvalidator.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["headersvalidator*"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=headersvalidator --cov-report=term-missing"
